tests/snapshots/integration__integration_tests__config_show__config_show_partial_shell_config_shows_hint.snap
---
source: tests/integration_tests/config_show.rs
info:
  program: wt
  args:
    - config
    - show
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_TEST_COMPINIT_CONFIGURED: "1"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[36mUSER CONFIG[39m  ~/.config/worktrunk/config.toml
💡 [2mEmpty file (using defaults)[22m

[36mPROJECT CONFIG[39m  [REPO]/.config/wt.toml
💡 [2mNot found[22m

[36mSHELL INTEGRATION[39m
💡 [2mNot configured shell extension & completions for bash @ ~/.bashrc[22m
⚪ Already configured shell extension & completions for [1mzsh[22m @ ~/.zshrc
⚪ [2mSkipped fish; ~/.config/fish/conf.d not found[22m

💡 [2m[90mwt config shell install[39m enables shell integration[22m

[36mBINARIES[39m
💡 [2mCI status requires GitHub or GitLab remote[22m
