tests/snapshots/integration__integration_tests__config_show__config_show_warns_unknown_project_keys.snap
---
source: tests/integration_tests/config_show.rs
info:
  program: wt
  args:
    - config
    - show
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[36mUSER CONFIG[39m  ~/.config/worktrunk/config.toml
[107m [0m  worktree-path = [32m"../{{ main_worktree }}.{{ branch }}"

[36mPROJECT CONFIG[39m  [REPO]/.config/wt.toml
🟡 [33mUnknown key [1mpost-merge-command[22m will be ignored[39m
[107m [0m  [1m[36m[post-merge-command]
[107m [0m  deploy = [32m"task deploy"

[36mSHELL INTEGRATION[39m
⚪ [2mSkipped bash; ~/.bashrc not found[22m
⚪ [2mSkipped zsh; ~/.zshrc not found[22m
⚪ [2mSkipped fish; ~/.config/fish/conf.d not found[22m

[36mBINARIES[39m
💡 [2mCI status requires GitHub or GitLab remote[22m
